--- a/app/src/main/res/layout/card_fictional_item_layout.xml
+++ b/app/src/main/res/layout/card_fictional_item_layout.xml
@@ -103,7 +103,7 @@
                 android:id="@+id/details"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:text="Details"
                 android:textSize="12sp"
                 android:textStyle="italic"
@@ -114,12 +114,13 @@
                 android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 tools:text="Description"
                 app:layout_constraintTop_toBottomOf="@id/details"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="gone"
                 />
 
             <CheckBox
